--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@ body {
 img {
   max-width: 100%;
 }
+
 main {
   padding: 5px;
   max-width: 600px;
@@ -18,8 +19,7 @@ main {
 header {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 80px;
-  margin-top: 15px;
+  margin: 15px 0 80px;
   align-items: center;
 }
 
@@ -28,6 +28,7 @@ header a {
   text-decoration: none;
   color: inherit;
 }
+
 header a.logo {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-weight: bold;
@@ -45,11 +46,6 @@ div.post {
   gap: 20px;
   margin-bottom: 30px;
 }
-@media screen and (min-width: 700px) {
-  div.post {
-    grid-template-columns: 0.9fr 1.1fr;
-  }
-}
 
 @media screen and (min-width: 390px) {
   div.post {
@@ -64,7 +60,6 @@ div.post div.texts h2 {
 }
 
 div.post p.info {
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin: 0;
   color: #888;
   font-size: 0.7rem;
@@ -111,9 +106,9 @@ input:focus {
   outline: none;
 }
 
-input {
+input,
+button {
   display: block;
-  margin-bottom: 5px;
   width: 100%;
   padding: 5px 7px;
   border: 2px solid #ddd;
@@ -122,9 +117,7 @@ input {
 }
 
 button {
-  display: block;
-  width: 100%;
-  background-color: #000000;
+  background-color: #000;
   border: 0;
   color: #fff;
   border-radius: 5px;
@@ -132,7 +125,8 @@ button {
   cursor: pointer;
 }
 
-form.login h1 form.register h1 {
+form.login h1,
+form.register h1 {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   text-align: center;
 }
@@ -142,43 +136,51 @@ div.post-page div.image {
   display: flex;
   overflow: hidden;
 }
+
 div.post-page div.image img {
   object-fit: cover;
   object-position: center center;
   width: 100%;
 }
+
 div.post-page a {
   color: #333;
   text-decoration: underline;
 }
-div.post-page h1 {
+
+div.post-page h1,
+div.post-page time {
   text-align: center;
   margin: 10px 0 5px;
 }
+
 div.post-page time {
-  text-align: center;
   display: block;
   font-size: 1rem;
   color: #aaa;
-  margin: 10px 0;
 }
+
 div.post-page div.author {
   text-align: center;
   margin-bottom: 20px;
   font-size: 0.7rem;
   font-weight: bold;
 }
+
 div.content p {
   line-height: 1.7rem;
   margin: 30px 0;
 }
+
 div.content li {
   margin-bottom: 10px;
 }
+
 div.edit-row {
   text-align: center;
   margin-bottom: 20px;
 }
+
 div.post-page a.edit-btn {
   background-color: #333;
   display: inline-flex;
@@ -189,16 +191,20 @@ div.post-page a.edit-btn {
   border-radius: 5px;
   text-decoration: none;
 }
+
 a svg {
   height: 20px;
 }
 
-.feed-link {
+.feed-link,
+.profile-link,
+.write-link {
+  padding: 8px;
+  border-radius: 1.5rem;
   font-weight: bold;
   color: rgba(0, 0, 255, 0.537);
-  border-radius: 1.5rem;
-  padding: 8px 8px;
 }
+
 .feed-link:hover {
   color: #fff;
   background-color: rgba(106, 89, 187, 0.888);
@@ -206,8 +212,6 @@ a svg {
 
 .write-link {
   color: #fff;
-  border-radius: 1.5rem;
-  padding: 10px 10px;
   background-color: rgba(106, 89, 187, 0.888);
 }
 
