style: Added style for page not found

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -230,3 +230,16 @@ a svg {
   text-align: right;
   margin: 10px 0 5px;
 }
+
+.not-found {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+}
+
+h1 {
+  font-size: 2rem;
+  color: #333;
+  text-align: center;
+}
