--- a/src/styles/Explore.css
+++ b/src/styles/Explore.css
@@ -1,43 +1,41 @@
+/* Responsive Explore Component */
+
 .explore-container {
-  max-width: 900px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
 }
 
 .search-bar {
-  text-align: center;
   margin-bottom: 20px;
 }
 
-.search-bar input[type="text"] {
-  padding: 8px;
-  width: 100%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-}
-
 .post-list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 20px;
 }
 
 .post-item {
-  flex: 1;
-  max-width: calc(33.33% - 20px);
   border: 1px solid #ccc;
+  padding: 10px auto;
   border-radius: 5px;
-  overflow: hidden;
 }
-
-.post-image {
-  width: 100%;
-  height: 90px;
-  overflow: hidden;
+.post-item h3 {
+  padding: 7px;
+  padding-top: 0px;
+  padding-bottom: 5px;
+  margin: 0px;
 }
 
 .post-image img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+}
+
+@media screen and (max-width: 768px) {
+  .post-list {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
 }
