--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,4 @@
+/* Global Styles */
 * {
   box-sizing: border-box;
 }
@@ -10,12 +11,14 @@ img {
   max-width: 100%;
 }
 
+/* Main Content Container */
 main {
   padding: 5px;
   max-width: 600px;
   margin: 0 auto;
 }
 
+/* Header Styles */
 header {
   display: flex;
   justify-content: space-between;
@@ -40,6 +43,7 @@ header nav {
   gap: 15px;
 }
 
+/* Post Styles */
 div.post {
   display: grid;
   grid-template-columns: 1fr;
@@ -96,12 +100,7 @@ div.post p.summary .read-more:hover {
   text-decoration: underline;
 }
 
-form.login,
-form.register {
-  max-width: 400px;
-  margin: 0 auto;
-}
-
+/* Form Styles */
 input:focus {
   outline: none;
 }
@@ -111,6 +110,7 @@ button {
   display: block;
   width: 100%;
   padding: 5px 7px;
+  margin: 5px 0 0 0;
   border: 2px solid #ddd;
   border-radius: 5px;
   background-color: #fff;
@@ -132,6 +132,7 @@ form.register h1 {
   text-align: center;
 }
 
+/* Post Page Styles */
 div.post-page div.image {
   max-height: 300px;
   display: flex;
@@ -197,6 +198,7 @@ a svg {
   height: 20px;
 }
 
+/* Additional Links and Buttons */
 .feed-link,
 .profile-link,
 .write-link {
@@ -231,6 +233,7 @@ a svg {
   margin: 10px 0 5px;
 }
 
+/* Miscellaneous Styles */
 .not-found {
   display: flex;
   justify-content: center;
