--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -134,9 +134,10 @@ form.register h1 {
 
 /* Post Page Styles */
 div.post-page div.image {
-  max-height: 300px;
+  max-height: 500px;
   display: flex;
   overflow: hidden;
+  padding-top: 10px;
 }
 
 div.post-page div.image img {
@@ -170,11 +171,13 @@ div.post-page div.author {
 }
 
 div.content p {
-  line-height: 1.7rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  line-height: 1.2rem;
   margin: 30px 0;
 }
 
 div.content li {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   margin-bottom: 10px;
 }
 
